tests/vertical-slice/accept/match_record_literal_predicate.hew
type Point {
    x: i64,
    y: i64,
}

fn classify(p: Point) -> i64 {
    match p {
        Point { x: 0, y } => 100 + y,
        Point { x, y } => x + y,
    }
}

fn main() -> i64 {
    println(classify(Point { x: 0, y: 7 }));
    println(classify(Point { x: 3, y: 4 }));
    0
}
